Revision history for Perl extension AnyEvent.

TODO: document TCP_*** constants

TODO: log message level redistribute?
TOOD: stop internals abusing
TODO: AE::logger
TODO: add debug/trace logging to some modules
TODO: poe child watcher hang?
	- INCOMPATIBLE CHANGE: the default log level is now "4" (error
          and above), and some messages inside AnyEvent have been elevated
          to higher log levels to print by default.
        - AnyEvent::log, unlike AnyEvent::Log::log, did not always exit on fatal.
        - add google public ipv6 dns as fallback servers, so AE::DNS can finally
          support ipv6-only operation even with defaults (also use ::1 instead
          of 127.0.0.1).
	- give better guidelines on how to chose a logging level.
        - AE::Strict now checks that registered fds are still valid at regular
          intervals.
        - skip frequently called 'require' calls if the module appears loaded.
	- increase signal latency test timer considerably for poor little osx.
        - mention some debugging aids in the tutorial.

6.02  Fri Aug 26 20:08:31 CEST 2011
        - log_to_syslog now accepts facility strings.
	- log_to_syslog would not allow facilities - "$facility|$level"
          *literally* means that string. sheesh.
        - the CPAN parser got confused and thought we provide Sys::Syslog, try
          to work around.
        - renamed AnyEvent::Impl::FLTK2 to FLTK.

6.01  Fri Aug 26 07:04:11 CEST 2011
        - INCOMPATIBLE CHANGE: AnyEvent::DNS resource records now include
          the TTL as fourth element - this affects ->resolve, ->request
          and ->dns_unpack indirectly. Convenience functions such as
          AnyEvent::DNS::{a,txt,mx,srv} are not affected, neither is
          AnyEvent::Socket.
        - INCOMPATIBLE CHANGE: backend authors now should not implement
          one_event or loop, but instead the AnyEvent::CondVar::_wait and _poll
          methods.